// Vitest Snapshot v1

exports[`BookablesMap view > should render correctly 1`] = `
"<header-stub title=\\"first sample space\\" backfallback=\\"[object Object]\\" rightclass=\\"hidden md:flex\\" disablefallback=\\"false\\"></header-stub>
<space-desktop-menu-stub></space-desktop-menu-stub>
<toolbar-header-stub actionfor=\\"bookables\\"></toolbar-header-stub>
<div class=\\"flex flex-col flex-grow min-h-0 pt-12\\">
  <space-map-stub disablepanning=\\"false\\" disablecontrol=\\"false\\">
    <floor-plan-stub spaceid=\\"60f53bede6f8313dff7f99e0\\"></floor-plan-stub>
    <map-objects-stub mode=\\"show-availability\\" spaceid=\\"60f53bede6f8313dff7f99e0\\" clickable=\\"true\\" isadmin=\\"false\\"></map-objects-stub>
  </space-map-stub>
</div>
<home-action-buttons-stub></home-action-buttons-stub>
<space-footer-menu-stub></space-footer-menu-stub>"
`;

exports[`BookablesMap view > should render correctly no-map svg when no floorplan and no map objects 1`] = `
"<header-stub title=\\"first sample space\\" backfallback=\\"[object Object]\\" rightclass=\\"hidden md:flex\\" disablefallback=\\"false\\"></header-stub>
<space-desktop-menu-stub></space-desktop-menu-stub>
<toolbar-header-stub actionfor=\\"bookables\\"></toolbar-header-stub>
<div class=\\"flex flex-col justify-center items-center flex-grow\\"><img src=\\"/src/assets/img/no-map.svg?url\\" alt=\\"empty_map_desc\\" class=\\"max-w-70\\">
  <p class=\\"text-center font-bold mt-8\\">empty_map</p>
  <!--v-if-->
</div>
<home-action-buttons-stub></home-action-buttons-stub>
<space-footer-menu-stub></space-footer-menu-stub>"
`;

exports[`BookablesMap view > should render correctly when no space 1`] = `
"<header-stub title=\\"BOOKYP\\" backfallback=\\"[object Object]\\" rightclass=\\"hidden md:flex\\" disablefallback=\\"false\\"></header-stub>
<space-desktop-menu-stub></space-desktop-menu-stub>
<toolbar-header-stub actionfor=\\"bookables\\"></toolbar-header-stub>
<div class=\\"flex flex-col justify-center items-center flex-grow\\"><img src=\\"/src/assets/img/no-map.svg?url\\" alt=\\"empty_map_desc\\" class=\\"max-w-70\\">
  <p class=\\"text-center font-bold mt-8\\">empty_map</p>
  <!--v-if-->
</div>
<home-action-buttons-stub></home-action-buttons-stub>
<space-footer-menu-stub></space-footer-menu-stub>"
`;
